tests/org.eclipse.php.core.tests/workspace/errors/php54/reassignAutoGlobalVariable1.pdtt
--TEST--

--FILE--
<?
function foo($_GET)
{
}
?>
--EXPECT--
[line=2, start=16, end=21] Cannot re-assign auto-global variable $_GET
